--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,9 @@ htmlcov/
 dist/
 build/
 *.egg-info/
+
+top_down_testing/SynthesizeBFS.hs
+top_down_testing/SynthesizeLogic.hs
+top_down_testing/comments.hs
+top_down_testing/environment.hs
+.vsls.json
