--- a/benchmark/suites/working.yml
+++ b/benchmark/suites/working.yml
@@ -1,12 +1,17 @@
 - name: appBoth
   query: "(a -> b) -> (a -> c) -> a -> (b, c)"
-  solution: "\\f g x -> (f x , g x)"
+  solution: "\\arg0 arg1 arg2 -> (arg0 arg2 , arg1 arg2)"
   source: "original"
   example: 
     - inputs: ["\\x -> x + 1", "\\x -> x * 3", "3"]
       output: (4, 9)
     - inputs: ["\\x -> x ++ x", "Data.List.reverse", "[1,2,3]"]
       output: ([1,2,3,1,2,3], [3,2,1])
+
+# unifying ((b , c)) with ("Pair", <b> . <a> . (a -> (b -> {(a , b)|_v == (Pair x y)}))), isChecked: True, sub: fromList [("tau0",c),("tau1",b)]
+
+# arg0'ho' ==> fun (a) (b)
+# stack run -- hplus --json='{"query": "(a -> b) -> (a -> c) -> a -> (b, c)", "inExamples": [{"inputs": ["\\x -> x + 1", "\\x -> x * 3", "3"], "output":  "(4, 9)"}, {"inputs": ["\\x -> x ++ x", "Data.List.reverse", "[1,2,3]"], "output":  "([1,2,3,1,2,3], [3,2,1])"}]}'
 
 #- name: intToBS
 #  query: "Int64 -> ByteString"
@@ -22,6 +27,8 @@
       output: Just 1
     - inputs: ["False", "2"]
       output: Nothing
+
+# stack run -- hplus --json='{"query": "Bool -> a -> Maybe a", "inExamples": [{"inputs": ["True", "1"], "output":  "Just 1"}, {"inputs": ["False", "2"], "output":  "Nothing"}]}'
 
 - name: both
   query: "(a -> b) -> (a, a) -> (b, b)"
@@ -60,6 +67,13 @@
   example:
     - inputs: ["\\x -> if x < 3 then Nothing else Just (x * x)", "[2,4,6]"]
       output: Just 16
+    # added by us
+    # - inputs: ["\\x -> if x < 3 then Nothing else Just (x * x)", "[]"]
+    #   output: Nothing
+
+      # \arg0 arg1 -> arg0 (GHC.List.head (GHC.List.tail arg1))
+# stack run -- hplus --json='{"query": "(a -> Maybe b) -> [a] -> Maybe b", "inExamples": [{"inputs": ["\\x -> if x < 3 then Nothing else Just (x * x)", "[2,4,6]"], "output":  "Just 16"}]}'
+# \\arg0 arg1 -> Data.Maybe.listToMaybe (Data.Maybe.mapMaybe arg0 arg1)
 
 - name: mergeEither
   query: "Either a (Either a b) -> Either a b"
@@ -67,11 +81,11 @@
   source: "original"
   example:
     - inputs: ["Left 2"]
-      output: Left 2
+      output: "Left 2"
     - inputs: ["Right (Left 2)"]
-      output: Left 2
+      output: "Left 2"
     - inputs: ["Right (Right 2.2)"]
-      output: Right 2.2
+      output: "Right 2.2"
 
 - name: multiApp
   query: "(a -> b -> c) -> (a -> b) -> a -> c"
@@ -92,6 +106,8 @@
       output: "[2]"
     - inputs: ["\"abc\""]
       output: "[\"abc\"]"
+
+# stack run -- hplus --json='{"query": "a -> [a]", "inExamples": [{"inputs": ["2"], "output" : "[2]"}, {"inputs": ["\"abc\""], "output" : "[\"abc\"]"}]}'
 
 - name: head-last
   query: "[a] -> (a,a)"
@@ -119,6 +135,8 @@
     - inputs: ["[[1,2,3], [2,3,4,5], [3,4,5,6,7]]", "\\xs -> 2 `GHC.List.elem` xs"]
       output: "2"
 
+# stack run -- hplus --json='{"query": "[a] -> (a -> Bool) -> Int", "inExamples": [ {"inputs": ["[1,2,3,4,5]", "\\x -> x `mod` 2 == 0"], "output": "2"}, {"inputs": ["[[1,2,3], [2,3,4,5], [3,4,5,6,7]]", "\\xs -> 2 `GHC.List.elem` xs"], "output": "2"} ]}'
+# \\arg0 arg1 -> GHC.List.length (GHC.List.filter arg1 arg0)"
 - name: splitStr
   query: "String -> Char -> [String]"
   solution: "\\xs x -> Data.List.words (Data.List.map (\\y -> Data.Bool.bool y ' ' (y == x)) xs)"
@@ -151,13 +169,27 @@
     - inputs: ["[1,2,3]","[2,3,4]"]
       output: "[[(1,2), (1,3), (1,4)], [(2,2), (2,3), (2,4)], [(3,2), (3,3), (3,4)]]"
 
+# stack run -- hplus --json='{"query": "[a] -> [b] -> [[(a,b)]]", "inExamples": [{"inputs": ["[1,2,3]","[2,3,4]"], "output": "[[(1,2), (1,3), (1,4)], [(2,2), (2,3), (2,4)], [(3,2), (3,3), (3,4)]]"}]}'
+
 - name: multiAppPair
   query: "(a -> b, a -> c) -> a -> (b, c)"
-  solution: "\\tp x -> (,) ((Data.Tuple.fst tp) x) ((Data.Tuple.snd tp) x)"
+  solution: "\\arg0 arg1 -> (,) ((Data.Tuple.fst arg0) arg1) ((Data.Tuple.snd arg0) arg1)"
   source: "original"
   example:
     - inputs: ["(\\x -> x * 3, \\x -> x * x)", "2"]
       output: (6, 4)
+# (b, c)
+# ,           returns (b, c) given (b) and (c)
+#   $         returns (b) given (a->b) and (a)
+#     fst     returns (a->b) given (a -> b, a -> c)
+#       arg0  returns (a -> b, a -> c)
+#     arg1   returns (a)
+#   $         returns (c) given (a->c) and (a)
+#     snd     returns (a->c) given (a -> b, a -> c)
+#       arg0  returns (a -> b, a -> c)
+#     arg1  returns (a)
+
+# stack run -- hplus --json='{"query": "(a -> b, a -> c) -> a -> (b, c)", "inExamples": [{"inputs": ["(\\x -> x * 3, \\x -> x * x)", "2"], "output":  "(6, 4)"}]}'
 
 # No useful solution. Head of map ?
 - name: hoogle01
@@ -196,6 +228,19 @@
     - inputs: ["[Left 1, Right 2, Right 3]"]
       output: "Right [2, 3]"
 
+# -- stack run -- hplus --json='{"query": "[Either a b] -> Either a [b]", "inExamples": [{"inputs": ["[Left 1, Right 2, Right 3]"], "output":  "Right [2,3]"}]}'
+# stack run -- hplus --json='{"query": "(a->b) -> c -> (a->b, c)", "inExamples": []}'
+# Registering library for HooglePlus-0.1.0.0..
+# running dfs on <b> . <a> . ([Either (a) (b)] -> Either (a) (([b]))) at size 1
+# running dfs on <b> . <a> . ([Either (a) (b)] -> Either (a) (([b]))) at size 2
+# running dfs on <b> . <a> . ([Either (a) (b)] -> Either (a) (([b]))) at size 3
+# program: Data.Either.Right (Data.Either.rights arg0)
+# "Right [2, 3]"
+# running dfs on <b> . <a> . ([Either (a) (b)] -> Either (a) (([b]))) at size 4
+# program: [] !! (GHC.List.length arg0)
+# let arg0 = [Left 1, Right 2, Right 3]
+
+
 - name: firstKey
   query: "[(a,b)] -> a"
   solution: "\\arg0 -> Data.Tuple.fst (Data.List.head arg0)"
@@ -211,6 +256,11 @@
   example:
     - inputs: ["(\\x -> x * x, 10)"]
       output: "100"
+
+# syn "arg0:Just (a -> b) -> arg1:a -> b"
+# (fromJust arg0) arg1
+
+
 
 # No solution?
 # - name: cross
@@ -259,6 +309,10 @@
     - inputs: ["[[[1,2,3], [2,3,4]],[[1,2]]]"]
       output: "[1,2,3,2,3,4,1,2]"
 
+# stack run -- hplus --json='{"query": "[[[a]]] -> [a]", "inExamples": [{"inputs": ["[[[1,2,3], [2,3,4]],[[1,2]]]"], "output": "[1,2,3,2,3,4,1,2]"}]}'
+
+# stack run -- hplus --json='{"query": "Bool -> a -> Maybe a", "inExamples": [{"inputs": ["True", "1"], "output": "Just 1"}, {"inputs": ["False", "2"], "output": "Nothing"}]}'
+
 - name: takeNdropM
   query: "Int -> Int -> [a] -> ([a], [a])"
   solution: "\\n m l -> (Data.List.take n l, Data.List.drop m l)"
@@ -281,6 +335,9 @@
   source: "original"
   example: []
 
+# ("GHC.List.replicate",<a> . (Int -> (a -> [a])))
+# stack run -- hplus --json='{"query": "(a->b)->Int->[a->b]", "inExamples": []}'
+
 - name: mbAppFirst
   query: "b -> (a -> b) -> [a] -> b"
   solution: "\\x f xs -> Data.Maybe.maybe x f (Data.Maybe.listToMaybe xs)"
@@ -298,6 +355,8 @@
   example:
     - inputs: ["GHC.List.length", "\\x -> x * x", "[[1,2,3], [1,2,3,4], [1,2,3,4,5]]"]
       output: "[9, 16, 25]"
+
+# stack run -- hplus --json='{"query": "(a->b)->(b->c)->[a]->[c]", "inExamples": [{"inputs": ["GHC.List.length", "\\x -> x * x", "[[1,2,3], [1,2,3,4], [1,2,3,4,5]]"], "output":  "[9, 16, 25]"}]}'
 
 - name: zipWithResult
   query: "(a->b)->[a]->[(a,b)]"
@@ -408,6 +467,9 @@
     - inputs: ["3", "[1,3,5,7,9]"]
       output: "Just 3"
 
+# stack run -- hplus --json='{"query": "Eq a => a -> [a] -> Maybe a", "inExamples": [{"inputs": ["2", "[1,3,5,7,9]"], "output":  "Nothing"}, {"inputs": ["3", "[1,3,5,7,9]"], "output":  "Just 3"}]}'
+
+
 # - name: convert
 #   query: Int -> Int -> Float
 
@@ -420,6 +482,11 @@
       output: "Nothing"
     - inputs: ["1", "1"]
       output: "Just 1"
+
+
+
+# stack run -- hplus --json='{"query": "Eq a => a -> a -> Maybe a", "inExamples": [{"inputs": ["1", "2"], "output":  "Nothing"}, {"inputs": ["1", "1"], "output": "Just 1"}]}'
+
 
 # - name: d2i
 #   query: Double -> Integer
