--- a/benchmark/suites/working.yml
+++ b/benchmark/suites/working.yml
@@ -1,3 +1,24 @@
+# appBoth
+# synGuard' "(a -> b) -> (a -> c) -> a -> (b, c)" ["Pair"] [(["\\x -> x + 1", "\\x -> x * 3", "3"], "(4, 9)"), (["\\x -> x ++ x", "Data.List.reverse", "[1,2,3]"], "([1,2,3,1,2,3], [3,2,1])")]
+
+# test
+# synGuard' "Bool -> a -> Maybe a" ["bool", ".Nothing", ".Just"] [(["True", "1"], "Just 1"), (["False", "2"], "Nothing")]
+
+# both DO AGAIN
+# synGuard' "(a -> b) -> (a, a) -> (b, b)" [".fst", ".snd"] [(["\\x -> x + 1", "(43, 25)"], "(44, 26)"), (["\\x -> GHC.List.length x", "([1,2,3,4],[2,3,4])"], "(4, 3)")]
+
+# firstJust
+# synGuard' "a -> [Maybe a] -> a" ["fromMaybe", "listToMaybe", "catMaybes"] [(["3", "[Nothing, Just 2, Nothing]"], "2"), (["3", "[]"], "3")]
+
+# mapEither DO AGAIN
+# synGuard' "(a -> Either b c) -> [a] -> ([b], [c])" ["partitionEithers", "map"] [(["\\x -> if x < 10 then Left x else Right x", "[0,10,20,30]"], ([0], [10, 20, 30])),(["\\x -> if x < 10 then Left \"error\" else Right (x * 2)", "[1,3,11,20]"], (["error", "error"], [22, 40]))]
+
+# mapMaybes DO AGAIN
+# synGuard' "(a -> Maybe b) -> [a] -> Maybe b" ["listToMaybe", "mapMaybe"] [(["\\x -> if x < 3 then Nothing else Just (x * x)", "[2,4,6]"], Just 16), (["\\x -> if x < 3 then Nothing else Just (x * x)", "[]"], Nothing)]
+
+# mergeEither
+# synGuard' "Either a (Either a b) -> Either a b" ["either", ".Left", ".Right"] [(["Left 2"], "Left 2"), (["Right (Left 2)"], "Left 2"), (["Right (Right 2.2)"], "Right 2.2")]
+
 - name: appBoth
   query: "(a -> b) -> (a -> c) -> a -> (b, c)"
   solution: "\\arg0 arg1 arg2 -> (arg0 arg2 , arg1 arg2)"
@@ -8,9 +29,7 @@
     - inputs: ["\\x -> x ++ x", "Data.List.reverse", "[1,2,3]"]
       output: ([1,2,3,1,2,3], [3,2,1])
 
-# unifying ((b , c)) with ("Pair", <b> . <a> . (a -> (b -> {(a , b)|_v == (Pair x y)}))), isChecked: True, sub: fromList [("tau0",c),("tau1",b)]
 
-# arg0'ho' ==> fun (a) (b)
 # stack run -- hplus --json='{"query": "(a -> b) -> (a -> c) -> a -> (b, c)", "inExamples": [{"inputs": ["\\x -> x + 1", "\\x -> x * 3", "3"], "output":  "(4, 9)"}, {"inputs": ["\\x -> x ++ x", "Data.List.reverse", "[1,2,3]"], "output":  "([1,2,3,1,2,3], [3,2,1])"}]}'
 
 #- name: intToBS
@@ -60,6 +79,7 @@
       output: ([0], [10, 20, 30])
     - inputs: ["\\x -> if x < 10 then Left \"error\" else Right (x * 2)", "[1,3,11,20]"]
       output: (["error", "error"], [22, 40])
+
 
 - name: mapMaybes
   query: "(a -> Maybe b) -> [a] -> Maybe b"
@@ -139,6 +159,7 @@
 # stack run -- hplus --json='{"query": "[a] -> (a -> Bool) -> Int", "inExamples": [ {"inputs": ["[1,2,3,4,5]", "\\x -> x `mod` 2 == 0"], "output": "2"}, {"inputs": ["[[1,2,3], [2,3,4,5], [3,4,5,6,7]]", "\\xs -> 2 `GHC.List.elem` xs"], "output": "2"} ]}'
 # \\arg0 arg1 -> GHC.List.length (GHC.List.filter arg1 arg0)"
 
+# pred-match
 # synGuard' "[a] -> (a -> Bool) -> Int" ["filter", "length"] [ ( ["[1,2,3,4,5]", "\\x -> x `mod` 2 == 0"], "2" ), ( ["[[1,2,3], [2,3,4,5], [3,4,5,6,7]]", "\\xs -> 2 `GHC.List.elem` xs"], "2" ) ]
 # "\\arg0 arg1 -> GHC.List.length (GHC.List.filter (\\arg2 -> arg1 arg2) arg0)"
 
@@ -166,6 +187,7 @@
     - inputs: [Just 2, "3"]
       output: Left 2
 
+# mbToEither
 # synGuard' "Maybe a -> b -> Either a b" [".maybe", ".Right", ".Left"] [( ["Nothing", "1"], "Right 1"), ( ["Just 2", "3"], "Left 2")]
 # \arg0 arg1 -> Data.Maybe.maybe (Data.Either.Right arg1) Data.Either.Left arg0
 # "\\arg0 arg1 -> Data.Maybe.maybe (Data.Either.Right arg1) (\\arg2 -> Data.Either.Left arg2) arg0
@@ -402,6 +424,9 @@
     - inputs: ["\\x -> x ++ x", "\"f-\"", "3"]
       output: "\"f-f-f-f-f-f-f-f-\""
 
+# synGuard' "(a->a) -> a -> Int -> a" ["foldr", ".replicate"] [( ["\\x -> x ++ x", "\"f-\"", "3"], "\"f-f-f-f-f-f-f-f-\"")]
+
+
 - name: eitherTriple
   query: "Either a b -> Either a b -> Either a b"
   solution: "\\x y -> Data.Either.either Left (const (Data.Either.either Left Right y)) x"
@@ -414,6 +439,8 @@
     - inputs: ["Right 2", "Right 3"]
       output: "Right 3"
 
+# synGuard'  "Either a b -> Either a b -> Either a b" [".either", "Left", "const", "Right"] [( ["Left 1", "Left 2"], "Left 1"), ( ["Left 1", "Right 2"], "Left 1"), ( ["Right 2", "Right 3"], "Right 3")]
+
 - name: pipe
   query: "[(a -> a)] -> (a -> a)"
   solution: "\\xs x -> Data.List.foldr ($) x xs"
@@ -422,7 +449,8 @@
     - inputs: ["[\\x -> x + 1, \\x -> x * 2, \\x -> x * x]", "3"]
       output: "19"
 
-# syn' "[(a -> a)] -> (a -> a)" [(["[\\x -> x + 1, \\x -> x * 2, \\x -> x * x]", "3"], "19")]
+# synGuard' "[(a -> a)] -> (a -> a)" ["foldr"] [(["[\\x -> x + 1, \\x -> x * 2, \\x -> x * x]", "3"], "19")]
+
 # \arg0 arg1 -> GHC.List.foldr Data.Function.id arg1 arg0
 # \arg0 arg1 -> GHC.List.foldr (\arg2 -> arg2) arg1 arg0
 # "\\arg0 arg1 -> GHC.List.foldr (\\arg2 -> \\arg3 -> arg1) arg1 arg0"
@@ -435,6 +463,9 @@
   example:
     - inputs: ["map (\\(x, y) -> (x, y * y))", "[1,2,3]", "[9,8,7]"]
       output: "[81, 64, 49]"
+
+# RUN AGAIN
+# synGuard' "([(a,Int)] -> [(a,Int)]) -> [a] -> [Int] -> [Int]" ["map", "snd", ".zip"] [("map (\\(x, y) -> (x, y * y))", "[1,2,3]", "[9,8,7]"], "[81, 64, 49]") ]
 
 # - name: dotProduct
 #   query: "[Int] -> [Int] -> Int"
@@ -455,6 +486,9 @@
   example:
     - inputs: ["[(1,2), (2,3), (4,6)]", "2"]
       output: "3"
+
+# synGuard' "Eq a => [(a,b)] -> a -> b" ["fromJust", "lookup"] [(["[(1,2), (2,3), (4,6)]", "2"], "3")]
+
 
 # - name: intersperse
 #   query: Show a => a -> [String] -> String
@@ -491,6 +525,8 @@
     - inputs: ["3", "[1,3,5,7,9]"]
       output: "Just 3"
 
+# synGuard' "Eq a => a -> [a] -> Maybe a" ["bool", "Nothing", "Just", "elem"] [( ["2", "[1,3,5,7,9]"], "Nothing"), ( ["3", "[1,3,5,7,9]"], "Just 3") ]
+
 # stack run -- hplus --json='{"query": "Eq a => a -> [a] -> Maybe a", "inExamples": [{"inputs": ["2", "[1,3,5,7,9]"], "output":  "Nothing"}, {"inputs": ["3", "[1,3,5,7,9]"], "output":  "Just 3"}]}'
 
 
@@ -507,7 +543,7 @@
     - inputs: ["1", "1"]
       output: "Just 1"
 
-
+# synGuard' "Eq a => a -> a -> Maybe a" ["bool", ".Nothing", ".Just", "=="] [( ["1", "2"], "Nothing"), ( ["1", "1"], "Just 1") ]
 
 # stack run -- hplus --json='{"query": "Eq a => a -> a -> Maybe a", "inExamples": [{"inputs": ["1", "2"], "output":  "Nothing"}, {"inputs": ["1", "1"], "output": "Just 1"}]}'
 
@@ -540,6 +576,11 @@
     - inputs: ["[1,2,3,4]", "(1,5)"]
       output: "False"
 
+# \\xs p -> (Data.List.elem (fst p) xs) && (Data.List.elem (snd p) xs)"
+
+# RUN AGAIN
+# synGuard' "[Int] -> (Int,Int) -> Bool" ["elem", "&&", "fst", "snd"] [( ["[1,2,3,4]", "(1,2)"], "True"), ( ["[1,2,3,4]", "(1,5)"], "False") ]
+
 - name: dedupe
   query: "Eq a => [a] -> [a]"
   solution: "\\xs -> Data.List.map Data.List.head (Data.List.group xs)"
@@ -548,7 +589,7 @@
     - inputs: ["\"aaabbbccc\""]
       output: "\"abc\""
 
-    # synGuard' "Eq a => [a] -> [a]" ["map", "head", "group"] [(["\"aaabbbccc\""], "\"abc\"")]
+# synGuard' "Eq a => [a] -> [a]" ["map", "head", "group"] [(["\"aaabbbccc\""], "\"abc\"")]
 
 # "\\arg0 -> GHC.List.map (\\arg1 -> GHC.List.head arg1) (Data.List.group arg0)"
 
@@ -559,3 +600,5 @@
   example:
     - inputs: ["[\\x -> x + 3, \\x -> x * x]", "4"]
       output: "[7, 16]"
+
+# synGuard' "[a -> b] -> a -> [b]" ["map"] [(["[\\x -> x + 3, \\x -> x * x]", "4"], "[7, 16]")]
